Fix: Color contrast is too low in striped table blocks (#185)

--- a/assets/sass/05-blocks/table/_editor.scss
+++ b/assets/sass/05-blocks/table/_editor.scss
@@ -9,4 +9,12 @@ table,
 	th {
 		padding: calc(0.5 * var(--global--spacing-unit));
 	}
+
+	&.is-style-stripes {
+		border-color: var(--table--stripes-border-color);
+
+		tbody tr:nth-child(odd) {
+			background-color: var(--table--stripes-background-color);
+		}
+	}
 }
